# Stepper_Motor_Symphony_v2

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/common/: MidiMessage.h
src/esp8266_echo_uart/: CMakeLists.txt  Makefile
src/esp8266_receiver/: CMakeLists.txt  Makefile
src/esp8266_receiver/main/: CMakeLists.txt  user_main.c
src/transmitter/: CMakeLists.txt  Exceptions.hpp  MessageQueue.hpp  MessageQueue.tpp  MessageQueueTests.cpp  MidiPlayerThread.cpp  MidiPlayerThread.hpp  MidiTransmitter.cpp  MidiTransmitter.hpp  Serial.cpp  Serial.hpp  SerialTests.cpp  SerialTransmitThread.cpp  SerialTransmitThread.hpp  main.cpp
